# nRF_samples

./: .gitignore  README.md
ble_node/: CMakeLists.txt  prj.conf  sample.yaml
ble_node/include/: client.h  common.h  server.h
ble_node/src/: client.c  main.c  server.c
ble_uart_bridge/: CMakeLists.txt  prj.conf
ble_uart_bridge/src/: main.c
ble_uart_multithread/: .clang-format  CMakeLists.txt  prj.conf
ble_uart_multithread/src/: main.c
doc/nrf_tasks/: README.md  Topics to cover.md
doc/nrf_tasks/.obsidian/: app.json  community-plugins.json  graph.json  types.json  workspace.json
doc/nrf_tasks/Notes/: Adding custom configurations.md  Board recovery if not detected.md  Boot sequence.canvas  Build config.md  Connecting to WiFi.md  Debugging.md  Device Driver.md  Devicetree.md  FIFO.md  GPIO API.canvas  HTTP client.md  Hash SHA256.md  Implementation of mailbox.canvas  Logger module.md  MQTT over WiFi.md  Mailboxes.md  Message queue.md  Mutexes.md  Native Sim.md  Network Protocol stack.md  Notes.md  Random number.md  Scheduler.md  Semaphores.md  Setup Network management API.canvas  Statically defined thread.md  Testing with ZTest.md  (+19 more)
spotbot_central/: CMakeLists.txt  prj.conf
spotbot_central/src/: ble.c  main.c
spotbot_central/src/common/: common.c  messages.h
spotbot_central/src/common/nvm/: nv_handler.c  nv_handler.h
spotbot_central/src/modules/ble/: ble.c
spotbot_central/src/modules/modem/: mqtt_handler.c  network_interface.c  network_interface.h
spotbot_central/src/modules/modem/esp/: esp.c  esp.h
spotbot_central/src/testApp/: testapp.c
(+17 files in other folders)
